--- a/static/css/main.css
+++ b/static/css/main.css
@@ -784,10 +784,6 @@ select {
   margin-right: 0.75rem;
 }
 
-.mt-28 {
-  margin-top: 7rem;
-}
-
 .mt-auto {
   margin-top: auto;
 }
@@ -808,16 +804,16 @@ select {
   height: 2.5rem;
 }
 
-.h-48 {
-  height: 12rem;
+.h-full {
+  height: 100%;
 }
 
 .h-screen {
   height: 100vh;
 }
 
-.h-full {
-  height: 100%;
+.h-8 {
+  height: 2rem;
 }
 
 .max-h-full {
@@ -852,6 +848,10 @@ select {
   max-width: 1536px;
 }
 
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .flex-wrap {
   flex-wrap: wrap;
 }
@@ -872,6 +872,16 @@ select {
   border-radius: 0.25rem;
 }
 
+.bg-\[\#ea3323\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 51 35 / var(--tw-bg-opacity));
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -881,39 +891,14 @@ select {
   background-color: rgb(255 255 255 / 0.3);
 }
 
-.bg-yellow-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
-}
-
-.bg-yellow-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
-}
-
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#ea3323\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(234 51 35 / var(--tw-bg-opacity));
-}
-
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .py-2 {
@@ -929,11 +914,6 @@ select {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 .text-center {
@@ -998,9 +978,12 @@ select {
   text-align: center;
 }
 
-.hover\:bg-blue-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+.sombra {
+  filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, .7));
+}
+
+.sombra-x2 {
+  filter: drop-shadow(6px 6px 4px rgba(0, 0, 0, .7));
 }
 
 .hover\:bg-red-700:hover {
@@ -1025,3 +1008,4 @@ select {
     width: 80%;
   }
 }
+  
