--- a/theme/static_src/source.css
+++ b/theme/static_src/source.css
@@ -23,3 +23,14 @@
     padding: 5px;
     text-align: center;
   }
+
+  .sombra {
+    -webkit-filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, .7));
+    filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, .7));
+  }
+  
+  .sombra-x2 {
+    -webkit-filter: drop-shadow(6px 6px 4px rgba(0, 0, 0, .7));
+    filter: drop-shadow(6px 6px 4px rgba(0, 0, 0, .7));
+  }
+  
