--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,7 +1,7 @@
 {% extends "admin/base_site.html" %}
-{% load static %}
+{% comment %} {% load static %}
 {% block extrahead %}
     <!-- Incluir archivo CSS personalizado -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/custom_admin.css' %}">
     {{ block.super }}  <!-- Importante para mantener otros scripts o CSS del admin original -->
-{% endblock %}
+{% endblock %} {% endcomment %}
