--- a/main/templates/home_page.html
+++ b/main/templates/home_page.html
@@ -28,7 +28,7 @@
                 Sistema de Registro
             </a>
             <a href="{% static 'apk/app-release.apk' %}" class="sombra bg-[#ea3323] hover:bg-red-700 text-white font-bold py-2 px-4 rounded inline-block text-center no-underline">
-                Desacrgar apk
+                Descargar apk
             </a>
             {% else %}
             <a href="{% url 'main:login' %}" class="sombra mb-5 bg-[#ea3323] hover:bg-red-700 text-white font-bold py-2 px-4 rounded inline-block text-center no-underline">
