--- a/main/templates/home_page.html
+++ b/main/templates/home_page.html
@@ -15,7 +15,7 @@
       <a href="{% url 'admin:index' %}" class="boton-primary">
         Sistema de Registro
       </a>
-      <a href="{% static 'apk/app-release.apk' %}" class="boton-primary">
+      <a href="{% url 'configapp:file_list' %}" class="boton-primary">
         Descargar App Android
       </a>
       <a href="{% url 'configapp:policy_view' %}" class="boton-primary">
